--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -394,6 +394,7 @@ ARG BASE_OS=ubuntu
 ARG ov_use_binary=0
 ARG FUZZER_BUILD=0
 COPY create_package.sh /
+RUN chmod +x ./create_package.sh
 RUN ./create_package.sh
 
 RUN groupadd --gid 5000 ovms && useradd --home-dir /home/ovms --create-home --uid 5000 --gid 5000 --shell /bin/bash --skel /dev/null ovms && \
