--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -509,7 +509,10 @@ RUN	apt-get update -y ; \
         rm -rf /var/lib/apt/lists/* && rm -rf /tmp/* ; \
         groupadd --gid 5000 ovms ; \
         useradd --home-dir /home/ovms --create-home --uid 5000 --gid 5000 --groups 39,44 --shell /bin/bash --skel /dev/null ovms
-
+RUN mv /etc/apt/sources.list /etc/apt/sources.list.bak && \
+echo "deb http://mirrors.aliyun.com/ubuntu/ focal main restricted universe multiverse" > /etc/apt/sources.list && \
+echo "deb http://mirrors.aliyun.com/ubuntu/ focal-security main restricted universe multiverse" >> /etc/apt/sources.list && \
+echo "deb http://mirrors.aliyun.com/ubuntu/ focal-updates main restricted universe multiverse" >> /etc/apt/sources.list
 RUN apt-get update && apt-get install -y --no-install-recommends libxml2 && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
 
 # for NVIDIA
